--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "CreateEncryptionKeyFiwire": {
       "commandName": "Project",
-      "commandLineArgs": "-i YXNhc2FzYXNhc2FzYXNhcw== -s YXNhc2FzYXNhc2FzYXNhc2FzYXNhc2FzYXNhc2FzYXM= -k YXNhc2FzYXNhc2FzYXNhc2FzYXNhc2FzYXNhc2FzYXM="
+      "commandLineArgs": "YXNhc2FzYXNhc2FzYXNhc2FzYXNhc2FzYXNhc2FzYXM="
     }
   }
 }
