remove test cmd line arg, add comment

--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -1,8 +1,7 @@
 {
   "profiles": {
     "CreateEncryptionKeyFiwire": {
-      "commandName": "Project",
-      "commandLineArgs": "YXNhc2FzYXNhc2FzYXNhc2FzYXNhc2FzYXNhc2FzYXM="
+      "commandName": "Project"
     }
   }
 }
