remove file not needed

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,5 +1,6 @@
 {
   "FiwireSettings": {
+    //replace with real values
     "Key": "asasasasasasasasasasasasasasasas",
     "SharedSecret": "asasasasasasasasasasasasasasasas",
     "IV": "asasasasasasasas"
